--- a/project/css.html
+++ b/project/css.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAME LEARN CSS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/learn/style.css">
 </head>
 <body>
     <div class="buttons-m">
