--- a/pages/git-githup.html
+++ b/pages/git-githup.html
@@ -14,15 +14,15 @@
     <section>
         <div class="left">
             <div onclick="goto('https://github.com/')" class="card">
-                <img src="/imges/githup.png" alt="">
+                <img src="../imges/githup.png" alt="">
                 <h2>GITHUP</h2>
             </div>
             <div onclick="goto('https://git-scm.com/downloads')" class="card">
-                <img src="/imges/git.png" alt="">
+                <img src="../imges/git.png" alt="">
                 <h2>GIT</h2>
             </div>
             <div onclick="goto('https://www.w3schools.com/git/default.asp')" class="card">
-                <img src="/imges/cube.png" alt="">
+                <img src="../imges/cube.png" alt="">
                 <h2>Tutorial</h2>
             </div>
 
