--- a/pages/html.html
+++ b/pages/html.html
@@ -14,11 +14,11 @@
     <section>
         <div class="left">
             <div onclick="goto('https://ammar7-o.github.io/runer/')" class="card">
-                <img src="/imges/visual-basic.png" alt="">
+                <img src="../imges/visual-basic.png" alt="">
                 <h2>VS CODE</h2>
             </div>
             <div onclick="goto('https://www.w3schools.com/html/default.asp')" class="card">
-                <img src="/imges/cube.png" alt="">
+                <img src="../imges/cube.png" alt="">
                 <h2>Tutorial</h2>
             </div>
 
