--- a/pages/python.html
+++ b/pages/python.html
@@ -14,11 +14,11 @@
     <section>
         <div class="left">
             <div onclick="goto('https://www.python.org/downloads/')" class="card">
-                <img src="/imges/visual-basic.png" alt="">
+                <img src="../imges/visual-basic.png" alt="">
                 <h2>DOWNLOAD</h2>
             </div>
             <div onclick="goto('https://www.w3schools.com/python/default.asp')" class="card">
-                <img src="/imges/cube.png" alt="">
+                <img src="../imges/cube.png" alt="">
                 <h2>Tutorial</h2>
             </div>
 
