--- a/pages/react.html
+++ b/pages/react.html
@@ -14,11 +14,11 @@
     <section>
         <div class="left">
             <div onclick="goto('https://react.dev/learn/installation')" class="card">
-                <img src="/imges/react.png" alt="">
+                <img src="../imges/react.png" alt="">
                 <h2>DOWNLOAD</h2>
             </div>
             <div onclick="goto('https://www.w3schools.com/react/default.asp')" class="card">
-                <img src="/imges/cube.png" alt="">
+                <img src="../imges/cube.png" alt="">
                 <h2>Tutorial</h2>
             </div>
 
