--- a/pages/scratch.html
+++ b/pages/scratch.html
@@ -14,7 +14,7 @@
     <section>
         <div class="left">
             <div onclick="goto('https://scratch.mit.edu/')" class="card">
-                <img src="/imges/scratch.png" alt="">
+                <img src="../imges/scratch.png" alt="">
                 <h2>SCRATCH</h2>
             </div>
         
