--- a/pages/ui-ux.html
+++ b/pages/ui-ux.html
@@ -14,7 +14,7 @@
     <section>
         <div class="left">
             <div onclick="goto('https://www.figma.com/')" class="card">
-                <img src="/imges/figma.png" alt="">
+                <img src="../imges/figma.png" alt="">
                 <h2>FIGMA</h2>
             </div>
 
