--- a/pages/home.html
+++ b/pages/home.html
@@ -48,7 +48,7 @@
     <h1>LEARN</h1>
     <div class="side-bar">
         <a onclick="go('./pages/html.html')" href="html.html">HTML</a>
-        <a onclick="go('./pages/css.html')" href="cs50.html">CSS</a>
+        <a onclick="go('./pages/css.html')" href="css.html">CSS</a>
         <a onclick="go('./pages/js.html')" href="js.html">JAVA-SCRIPT</a>
         <a onclick="goto('https://ammar7-o.github.io/esely/')" href="#">ENGLISH</a>
         <a onclick="go('./pages/git-githup.html')" href="git-githup.html">GIT_GITHUP</a>
