--- a/pages/react.html
+++ b/pages/react.html
@@ -29,6 +29,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=ljRWM93Mo8z_0foq&amp;list=PLYyqC4bNbCIdSZ-JayMLl4WO2Cr995vyS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=00doE8pqMU3-OD91&amp;list=PLeWmXrh00478cne-60B6MeU85l42cry2v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe width="695" height="391" src="https://www.youtube.com/embed/fJSFus0pxZI" title="كورس  أساسيات رياكت في 90 دقيقة | React.js Basics in 90 Mins (Arabic)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://youtu.be/nFIVU4ni9Gk?si=VqQjyBzjybnCFhU6"></iframe>
         </div>
 
     </section>
