--- a/pages/node.html
+++ b/pages/node.html
@@ -40,6 +40,8 @@
                 title="Node js Express Full Course  -  node js شرح" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<iframe width="932" height="524" src="https://www.youtube.com/embed/lAetWzfUgz8" title="كورس شامل لل Backend ب Node-Js مع TypeScript في 2024 !" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
     </section>
