--- a/pages/html.html
+++ b/pages/html.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ju<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -28,7 +28,7 @@
             <iframe  src="https://www.youtube.com/embed/videoseries?si=IEWJi9YdSrvceJ0f&amp;list=PLknwEmKsW8OtLRQPTLms79499meY2D6ij" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/videoseries?si=jkDu4qX_cUdyGYvN&amp;list=PLDoPjvoNmBAw_t_XWUFbBX-c9MafPk9ji" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe  src="https://www.youtube.com/embed/cvNTgKw8VlY?si=zVX9MLhvH5dRwLPT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe  src="https://youtu.be/KRiq7Eqfe-Q?si=SivAnV4Cjlcdlu9G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe  src="https://youtu.be/KRiq7Eqfe-Q?si=E8Tvm6EE6n4u8zqt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         </div>
     </section>
